--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </style>
 </head>
 <body>
-    <div class="main-text">Jade camera como camionero pero por lo meno no tiene que vaciarlos</div>
+    <div class="main-text">Jade comera como camionero pero por lo meno no tiene que vaciarlos</div>
     <div class="small-text">esto lo creo aitor en defensa de jade</div>
 </body>
+
 </html>
